# camonanowallet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
cli_client/: Cargo.toml  README.md
cli_client/src/: init.rs  main.rs
client/: Cargo.toml  LICENSE
client/core/: Cargo.toml
client/core/src/: config.rs  error.rs  frontiers.rs  lib.rs
client/core/src/client/: camo.rs  mod.rs  receive.rs  send.rs
client/core/src/rpc/: client.rs  mod.rs  result.rs  work.rs  wrapped.rs
client/core/src/work/: default_impl.rs  mod.rs  wasm_impl.rs
client/core_client/: Cargo.toml
client/core_client/src/: config.rs  constants.rs  frontiers.rs  lib.rs
client/core_client/src/client/: mod.rs  receive.rs
client/core_client/src/rpc/: workserver.rs
client/src/: balance.rs  config.rs  defaults.rs  error.rs  frontiers.rs  interface.rs  lib.rs  storage.rs  types.rs  wallet.rs
client/src/client/: camo.rs  mod.rs  receive.rs  send.rs
client/src/rpc/: client.rs  manager.rs  result.rs  wrapped.rs
cliwallet/: Cargo.toml  README.md
cliwallet/src/: error.rs  init.rs  main.rs  storage.rs
core_client/: Cargo.toml  LICENSE
core_client/src/: config.rs  error.rs  frontiers.rs  wallet.rs
core_client/src/client/: camo.rs  mod.rs  receive.rs  send.rs
core_client/src/rpc/: client.rs  manager.rs  mod.rs  workserver.rs
src/: balance.rs  defaults.rs  error.rs  init.rs  interface.rs  logging.rs  main.rs  storage.rs  types.rs
webwallet/: Cargo.toml  DISCLAIMERS  README.md  index.html  main.css  main.js
webwallet/src/: app_client.rs  error.rs  init.rs  lib.rs  logging.rs  main.rs  storage.rs  web_api.rs
