[workspace]
members = [
    "client/core_client",
    "client",
    "cli_client"
]

resolver = "2"

[workspace.dependencies]
core_client = { path = "client/core_client", version = "0.1.1" }
client = { path = "client", version = "0.1.1" }

confy = { version = "0.6.0", default-features = false, features = ["yaml_conf"] }

aes-gcm = "0.10.3"
argon2 = "0.5.3"
bincode = "1.3.3"
clap = "4.4.10"
futures = "0.3.30"
hex = "0.4.3"
log = "0.4.21"
nanopyrs = "0.4.0"
rand = "0.8.5"
rpassword = "7.3.1"
serde = "1.0.196"
serde_with = "3.7.0"
thiserror = "1.0.49"
tokio = "1.33.0"
zeroize = "1.6.0"