[workspace]
members = [
    "client/core",
    "client",
    "cliwallet",
    "webwallet"
]

resolver = "2"

[workspace.dependencies]
core_client = { path = "client/core", version = "0.1.1" }
client = { path = "client", version = "0.1.1" }

confy = { version = "0.6.0", default-features = false, features = ["yaml_conf"] }

aes-gcm = "0.10.3"
argon2 = "0.5.3"
bincode = "1.3.3"
clap = "4.4.10"
futures = "0.3.30"
getrandom = "0.2.15"
hex = "0.4.3"
log = "0.4.21"
nanopyrs = "0.4.0"
rand = "0.8.5"
rpassword = "7.3.1"
serde = "1.0.196"
serde_with = "3.7.0"
thiserror = "1.0.49"
tokio = "1.33.0"
zeroize = "1.6.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.43"
wasm_thread = "0.3.0"
web-sys = "0.3.70"
web-time = "1.1.0"