[package]
name = "camonano"
version = "0.1.1"
edition = "2021"

[dependencies]
client = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
rand = { workspace = true }
log = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
clap = { workspace = true, features = ["derive"] }
confy = { workspace = true }
rpassword = { workspace = true }
aes-gcm = { workspace = true }
