[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
core_client = { path = "../core_client", version = "0.1.0" }
thiserror = "1.0.49"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
rand = "0.8.5"
hex = "0.4.3"
serde = { version = "1.0.196", features = ["derive"] }
bincode = "1.3.3"
argon2 = "0.5.3"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
clap = { version = "4.4.10", features = ["derive"] }
aes-gcm = "0.10.3"