[package]
name = "client"
version = "0.1.1"
edition = "2021"

[dependencies]
core_client = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
rand = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
argon2 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
aes-gcm = { workspace = true }