[package]
name = "core_client"
version = "0.1.0"
edition = "2021"

[dependencies]
nanopyrs = { version = "0.4.0", features = ["all"] }
thiserror = "1.0.49"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
rand = "0.8.5"
hex = "0.4.3"
log = "0.4.21"
serde = { version = "1.0.196", features = ["derive"] }
serde_with = "3.7.0"
futures = "0.3.30"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }