[package]
name = "core_client"
version = "0.1.1"
edition = "2021"

[dependencies]
nanopyrs = { workspace = true, features = ["all"] }
thiserror = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
rand = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
futures = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_thread = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }